로그인/회원가입/이메일중복확인을 위한 로직 추가/변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 server.port=8081
 server.servlet.encoding.charset=utf-8
 server.tomcat.uri-encoding=UTF-8
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-alias=afopkeystore
-server.ssl.key-store=C:\\KeyStore\\AFOP_Server\\afopkeystore.pkcs12
+server.ssl.key-store=afopkeystore.pkcs12
 server.ssl.key-store-password=dkwlqdprkrhtlvek.
 server.ssl.key-password=dkwlqdprkrhtlvek.
-server.ssl.trust-store=C:\\KeyStore\\AFOP_Server\\afoptrust.pkcs12
+server.ssl.trust-store=afoptrust.pkcs12
 server.ssl.trust-store-password=dkwlqdprkrhtlvek.
 
 //datasource
