예외처리 관련 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.ssl.key-store-password=dkwlqdprkrhtlvek.
 server.ssl.key-password=dkwlqdprkrhtlvek.
 server.ssl.trust-store=afoptrust.pkcs12
 server.ssl.trust-store-password=dkwlqdprkrhtlvek.
+server.error.include-stacktrace=never
 
 //datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
