--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=8081
 server.servlet.encoding.charset=utf-8
 server.tomcat.uri-encoding=UTF-8
+
+//SSL
 server.ssl.enabled=false
 server.ssl.key-alias=afopkeystore
 server.ssl.key-store=afopkeystore.pkcs12
@@ -9,13 +11,19 @@ server.ssl.key-store-password=dkwlqdprkrhtlvek.
 server.ssl.key-password=dkwlqdprkrhtlvek.
 server.ssl.trust-store=afoptrust.pkcs12
 server.ssl.trust-store-password=dkwlqdprkrhtlvek.
-server.error.include-stacktrace=never
 
 //datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/afop?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.1.230:5306/afop?characterEncoding=UTF-8
 spring.datasource.username=afop
 spring.datasource.password=afop!3Password
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=xeon1217@gmail.com
+spring.mail.password=JungYOON!3GOOGLEPassword
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 //jpa
 spring.jpa.open-in-view=false
@@ -28,6 +36,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 //jwt
 spring.jwt.secret=dk!wlqdprkrhtlvek.
 
-//
-spring.messages.basename=i18n/exception
+//exception
+spring.messages.basename=exception
 spring.messages.encoding=UTF-8
+
+//error
+server.error.include-exception = true
+server.error.include-stacktrace=never
