--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,11 @@ server.ssl.trust-store-password=dkwlqdprkrhtlvek.
 
 //datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.230:5306/afop?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/afop?characterEncoding=UTF-8
 spring.datasource.username=afop
 spring.datasource.password=afop!3Password
 
+//mailing
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=xeon1217@gmail.com
@@ -43,3 +44,13 @@ spring.messages.encoding=UTF-8
 //error
 server.error.include-exception = true
 server.error.include-stacktrace=never
+
+//file
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
+file.upload-dir=/image
+file.upload-chat-dir=/image/chat
+file.upload-market-dir=/image/market
+
