사진 첨부 기능 등 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,9 +48,9 @@ server.error.include-stacktrace=never
 //file
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=128MB
-spring.servlet.multipart.max-request-size=128MB
-file.upload-dir=/image
-file.upload-chat-dir=/image/chat
-file.upload-market-dir=/image/market
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+file.upload-dir=./image
+file.upload-chat-dir=./image/chat
+file.upload-market-dir=./image/market
 
