새 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.ssl.trust-store-password=dkwlqdprkrhtlvek.
 
 //datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/afop?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.1.231:3306/afop?characterEncoding=UTF-8
 spring.datasource.username=afop
 spring.datasource.password=afop!3Password
 
@@ -51,6 +51,9 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=256MB
 file.upload-dir=./image
-file.upload-chat-dir=./image/chat
-file.upload-market-dir=./image/market
 
+//rabbitMQ
+spring.rabbitmq.host=192.168.1.231
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=jungyoon
+spring.rabbitmq.password=Xeon!3Pass
