--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.ssl.trust-store-password=dkwlqdprkrhtlvek.
 
 //datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.231:3306/afop?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/afop?characterEncoding=UTF-8
 spring.datasource.username=afop
 spring.datasource.password=afop!3Password
 
@@ -53,7 +53,7 @@ spring.servlet.multipart.max-request-size=256MB
 file.upload-dir=./image
 
 //rabbitMQ
-spring.rabbitmq.host=192.168.1.231
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=jungyoon
 spring.rabbitmq.password=Xeon!3Pass
