--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,15 +14,15 @@ server.ssl.trust-store-password=dkwlqdprkrhtlvek.
 
 //datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/afop?characterEncoding=UTF-8
-spring.datasource.username=afop
-spring.datasource.password=afop!3Password
+spring.datasource.url=jdbc:mysql://'db주소'?characterEncoding=UTF-8
+spring.datasource.username='아이디'
+spring.datasource.password='패스워드'
 
 //mailing
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xeon1217@gmail.com
-spring.mail.password=JungYOON!3GOOGLEPassword
+spring.mail.username='메일주소'
+spring.mail.password='패스워드'
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -51,9 +51,3 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=256MB
 file.upload-dir=./image
-
-//rabbitMQ
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=jungyoon
-spring.rabbitmq.password=Xeon!3Pass
